# pedantix

./: .gitignore  CONTEXT_HANDOFF.md  README.md  augment_oracle.py  pyproject.toml
pedantix_project/: __init__.py  claude_agent.py  cli.py  constrained_decoding.py  corpus.py  dataset.py  do_agent.py  eval_comparison.py  llm_policy.py  model.py  rl.py  run_cot_sft.sh  simulator.py  solver.py  text.py  trajectory_grpo.py  vocab_action_policy.py
scripts/: append_eos_to_completions.py  build_augmented_model.py  build_fasttext_model.sh  build_grpo_popular.py  build_lemma_table.py  build_oracle_sft.py  build_pageview_filter.py  build_pageview_ranking.py  build_qrank_filter.py  build_stochastic_oracle_sft.py  build_v2_sft_mix.py  eval_comparison.py  eval_v2.sh  generate_batch_sft.py  h100_eval_comparison.sbatch  h100_grpo_14b.sbatch  h100_grpo_dagger.sbatch  h100_grpo_dagger_cont.sbatch  h100_grpo_job.sbatch  h100_sft_warmstart.sbatch  make_fast100_subset.py  precompute_puzzle_ranks.py  precompute_word_sims.py  refetch_full_intros.py  run_4b_fixed.sh  run_claude_eval.sh  run_claude_sft_gen.sh  run_cot_sft.sh  run_dagger3.sh  run_deepseek_v5.sh  run_do_cot_traj_gen.sh  run_do_traj_gen.sh  run_exp10_lora_from_exp7.sh  run_exp11_qwen4b_frozen.sh  run_exp6_near_solve_shaping.sh  run_exp7_dynamic_vocab.sh  run_exp8_rollout3_expand40.sh  run_exp9_less_dagger.sh  run_grpo_data_gen.sh  run_h100_grpo.sh  (+20 more)
tests/: test_basic.py  test_dagger_offline.py  test_dagger_stubbed.py  test_near_solve_shaping.py  test_reward_fixes.py  test_soft_oracle.py  test_strong_oracle.py
